Add nav and fix 302 to 401 status codes
